Changes for 0.7.2.4

* should read you need java >= 5.0, not java > 5.0

Changes for 0.7.2.3

* make battle window a dialog (it will always be in front of the main window!)

* fix invalid roll count in multiplayer games when all bombers are hit by aa guns (sgb)

* fix null pointer when placing units in sea zone with enemy units (classic game only) (sgb)

* fix null pointer when when selecting null territories during movement (sgb)

Change for 0.7.2.2

* fix convoys (adam_j)

* fix bid purchase (sgb)

* Iron blitz mod (ic)

* fixed string index out of bounds when rolling pbem dice (sgb)

Changes for 0.7.2.1

* fix stat panel in europe (sgb)

* fix bug  1357768  0.7.2 dead defenders firing (sgb)

Change for 0.7.2

* on PBEM screen, add id field (for challenge id) (sgb)

* when clicking on a battle in history, center map on that territory (sgb)

* allow unloading units from a battle zone into newly conquered territories (sgb)

* allow saving games during battles (sgb)

* shift click on a unit (or territory) to select all units in the territory (sgb)

* rename attatchment to attachment (sgb)

* remove singleton image factories, move to UIContext (sgb)

* when retreating from a sea zone, if a fighter has no movement, the fighter gets a 1 movement bonus (sgb)

* battleships can only bombard if they are in a sea zone where transports unloaded (sgb)

* fix bug [ 1277099 ] map refresh problems undoing move with captured aa gun (sgb)

* Japanese victory points for a&a pacific (Adam_J)

changes for 0.7.1

* updated readme and user docs (George_H)

* if we have multiple transports that unloaded troops to an amphibious assault, then the transports 
  retreat from a  naval battle that precedes the amphibious assault, then too many units will retreat (sgb)

* various no pop up movement bugs (sgb)

* fixed chinese tech in big world 1942 map (sgb)

* fixed missing connection from solomon in pacific map (sgb)

* fixed bug [ 1259381 ] Bid purchasing (sgb)
