@@ -908,27 +908,100 @@ public class TripleAFrame extends JFrame
         }
     };
 
-    public IntegerMap<ProductionRule> getProduction(PlayerID player, boolean bid)
+    public IntegerMap<ProductionRule> getProduction(final PlayerID player, boolean bid)
     {
-        m_actionButtons.changeToProduce(player);
+        try
+        {
+            SwingUtilities.invokeAndWait(new Runnable()
+            {
+            
+                public void run()
+                {
+                    m_actionButtons.changeToProduce(player);
+                }
+            
+            });
+        } catch (InterruptedException e)
+        {
+            e.printStackTrace();
+        } catch (InvocationTargetException e)
+        {
+            e.printStackTrace();
+        }
+        
         return m_actionButtons.waitForPurchase(bid);
     }
 
-    public MoveDescription getMove(PlayerID player, IPlayerBridge bridge, boolean nonCombat)
+    public MoveDescription getMove(final PlayerID player, IPlayerBridge bridge, final boolean nonCombat)
     {
-        m_actionButtons.changeToMove(player, nonCombat);
+        try
+        {
+            SwingUtilities.invokeAndWait(new Runnable()
+            {
+            
+                public void run()
+                {
+                    m_actionButtons.changeToMove(player, nonCombat);
+                }
+            
+            });
+        } catch (InterruptedException e)
+        {
+            e.printStackTrace();
+        } catch (InvocationTargetException e)
+        {
+            e.printStackTrace();
+        }
+
         return m_actionButtons.waitForMove(bridge);
     }
 
-    public PlaceData waitForPlace(PlayerID player, boolean bid, IPlayerBridge bridge)
+    public PlaceData waitForPlace(final PlayerID player, final boolean bid, final IPlayerBridge bridge)
     {
-        m_actionButtons.changeToPlace(player);
+        try
+        {
+            SwingUtilities.invokeAndWait(new Runnable()
+            {
+            
+                public void run()
+                {
+                    m_actionButtons.changeToPlace(player);
+                }
+            
+            });
+        } catch (InterruptedException e)
+        {
+            e.printStackTrace();
+        } catch (InvocationTargetException e)
+        {
+            e.printStackTrace();
+        }
+        
         return m_actionButtons.waitForPlace(bid, bridge);
     }
 
-    public FightBattleDetails getBattle(PlayerID player, Collection<Territory> battles, Collection<Territory> bombingRaids)
+    public FightBattleDetails getBattle(final PlayerID player, final Collection<Territory> battles, final Collection<Territory> bombingRaids)
     {
-        m_actionButtons.changeToBattle(player, battles, bombingRaids);
+        try
+        {
+            SwingUtilities.invokeAndWait(new Runnable()
+            {
+            
+                public void run()
+                {
+                    m_actionButtons.changeToBattle(player, battles, bombingRaids);
+                }
+            
+            });
+        } catch (InterruptedException e)
+        {
+            e.printStackTrace();
+        } catch (InvocationTargetException e)
+        {
+            e.printStackTrace();
+        }
+        
+        
         return m_actionButtons.waitForBattleSelection();
     }
 
@@ -1001,9 +1074,28 @@ public class TripleAFrame extends JFrame
         return selected;
     }
 
-    public TechRoll getTechRolls(PlayerID id)
+    public TechRoll getTechRolls(final PlayerID id)
     {
-        m_actionButtons.changeToTech(id);
+        
+        try
+        {
+            SwingUtilities.invokeAndWait(new Runnable()
+            {
+            
+                public void run()
+                {
+                    m_actionButtons.changeToTech(id);
+                }
+            
+            });
+        } catch (InterruptedException e)
+        {
+            e.printStackTrace();
+        } catch (InvocationTargetException e)
+        {
+            e.printStackTrace();
+        }
+        
         return m_actionButtons.waitForTech();
     }
 
