@@ -1,10 +1,14 @@
 Changes for 0.7.2.4
 
-* should read you need java >= 5.0, not java > 5.0
+* move some code into swing event thread (sgb)
+
+* dont let players press dont place once player selection is done (sgb)
+ 
+* should read you need java >= 5.0, not java > 5.0 (sgb)
 
 Changes for 0.7.2.3
 
-* make battle window a dialog (it will always be in front of the main window!)
+* make battle window a dialog (it will always be in front of the main window!) (sgb)
 
 * fix invalid roll count in multiplayer games when all bombers are hit by aa guns (sgb)
 
